# ai-platform-rust

./: .gitignore  Cargo.toml  README.md  STATE.md  implementation.md
deploy/: nexus-ai.service
src/: config.rs  error.rs  main.rs  mock.rs  rate_limiter.rs  state.rs
src/routes/: bot.rs  chat.rs  code.rs  content.rs  email.rs  image.rs  landing.rs  limits.rs  mod.rs  resume.rs  seo.rs  video.rs  voice.rs
templates/: bot.html  chat.html  code.html  content.html  email.html  image.html  index.html  resume.html  seo.html  video.html  voice.html
