[package]
name = "nexus_ai"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "limit"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-embed = "8"
dashmap = "6"
dotenvy = "0.15"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = "0.3"
tower = "0.4"
futures = "0.3"
tokio-stream = "0.1"
chrono = "0.4"
once_cell = "1.19"
rand = "0.8"
mime_guess = "2"

# Memory allocator
mimalloc = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
